--- a/views/sign.ejs
+++ b/views/sign.ejs
@@ -19,66 +19,34 @@
       href="https://fonts.googleapis.com/css2?family=Bona+Nova:wght@700&display=swap"
       rel="stylesheet"
     />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
   </head>
-  <body id="sign-body">
-    <h2 class="sign-h2">Sign in to book Instruments</h2>
-    <div class="center" data-onsuccess="onSignIn">
-      <div
-        class="abcRioButton abcRioButtonLightBlue"
-        style="width: 120px; height: 36px"
-      >
-        <div class="abcRioButtonContentWrapper" onclick="triggerGoogleAuth()">
-          <div class="abcRioButtonIcon" style="padding: 8px">
-            <div
-              class="
-                abcRioButtonSvgImageWithFallback
-                abcRioButtonIconImage
-                abcRioButtonIconImage18
-              "
-              style="width: 18px; height: 18px"
-            >
-              <svg
-                class="abcRioButtonSvg"
-                version="1.1"
-                xmlns="http://www.w3.org/2000/svg"
-                width="18px"
-                height="18px"
-                viewBox="0 0 48 48"
-              >
-                <g>
-                  <path
-                    fill="#EA4335"
-                    d="M24 9.5c3.54 0 6.71 1.22 9.21 3.6l6.85-6.85C35.9 2.38 30.47 0 24 0 14.62 0 6.51 5.38 2.56 13.22l7.98 6.19C12.43 13.72 17.74 9.5 24 9.5z"
-                  ></path>
-                  <path
-                    fill="#4285F4"
-                    d="M46.98 24.55c0-1.57-.15-3.09-.38-4.55H24v9.02h12.94c-.58 2.96-2.26 5.48-4.78 7.18l7.73 6c4.51-4.18 7.09-10.36 7.09-17.65z"
-                  ></path>
-                  <path
-                    fill="#FBBC05"
-                    d="M10.53 28.59c-.48-1.45-.76-2.99-.76-4.59s.27-3.14.76-4.59l-7.98-6.19C.92 16.46 0 20.12 0 24c0 3.88.92 7.54 2.56 10.78l7.97-6.19z"
-                  ></path>
-                  <path
-                    fill="#34A853"
-                    d="M24 48c6.48 0 11.93-2.13 15.89-5.81l-7.73-6c-2.15 1.45-4.92 2.3-8.16 2.3-6.26 0-11.57-4.22-13.47-9.91l-7.98 6.19C6.51 42.62 14.62 48 24 48z"
-                  ></path>
-                  <path fill="none" d="M0 0h48v48H0z"></path>
-                </g>
-              </svg>
-            </div>
-          </div>
-          <span
-            class="abcRioButtonContents"
-            style="font-size: 13px; line-height: 34px; line-height: 34px"
-          >
-            <span> Sign In</span>
-          </span>
-        </div>
-      </div>
+  <body style="background-color: #F7F3E9;">
+<div style="position:absolute;
+
+height:120px;
+left:50%;
+top:50%;
+transform: translate(-50%,-50%);
+">
+<div class="d-flex" style="border: 1px solid #AFB9C8;padding: 5px;border-top-left-radius: 10px;background-color: #D5ECC2;" onclick="triggerAuth()">
+  <div>
+    <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
+  width="48" height="48"
+  viewBox="0 0 48 48"
+  style=" fill:#000000;"><path fill="#03A9F4" d="M21,31c0,1.104,0.896,2,2,2h17c1.104,0,2-0.896,2-2V16c0-1.104-0.896-2-2-2H23c-1.104,0-2,0.896-2,2V31z"></path><path fill="#B3E5FC" d="M42,16.975V16c0-0.428-0.137-0.823-0.367-1.148l-11.264,6.932l-7.542-4.656L22.125,19l8.459,5L42,16.975z"></path><path fill="#0277BD" d="M27 41.46L6 37.46 6 9.46 27 5.46z"></path><path fill="#FFF" d="M21.216,18.311c-1.098-1.275-2.546-1.913-4.328-1.913c-1.892,0-3.408,0.669-4.554,2.003c-1.144,1.337-1.719,3.088-1.719,5.246c0,2.045,0.564,3.714,1.69,4.986c1.126,1.273,2.592,1.91,4.378,1.91c1.84,0,3.331-0.652,4.474-1.975c1.143-1.313,1.712-3.043,1.712-5.199C22.869,21.281,22.318,19.595,21.216,18.311z M19.049,26.735c-0.568,0.769-1.339,1.152-2.313,1.152c-0.939,0-1.699-0.394-2.285-1.187c-0.581-0.785-0.87-1.861-0.87-3.211c0-1.336,0.289-2.414,0.87-3.225c0.586-0.81,1.368-1.211,2.355-1.211c0.962,0,1.718,0.393,2.267,1.178c0.555,0.795,0.833,1.895,0.833,3.31C19.907,24.906,19.618,25.968,19.049,26.735z"></path></svg>
+  </div>
+       <div style="padding:10px;white-space: nowrap;overflow: hidden;" >          Sign in with OutLook
+        
+       </div>
+</div>
     </div>
+    
+    
     <script>
-      function triggerGoogleAuth() {
-        return (location.href = "/auth/google");
+      function triggerAuth() {
+        return (location.href = "/auth/microsoft");
       }
     </script>
   </body>
